feat: :sparkles: feat TP3